register as student

--- a/majorproject/src/Screens/MyStyle.css
+++ b/majorproject/src/Screens/MyStyle.css
@@ -182,3 +182,16 @@ form .user-details .input-box{
 
 
 }
+
+.button_gradient{
+  
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
